namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: appns-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: appns-b
