app-a-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: appns-a
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-a-service
  template:
    metadata:
      labels:
        app: app-a-service
    spec:
      containers:
      - name: app-a
        image: nginx
        ports:
        - containerPort: 80
