app-b-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: appns-b
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-b-service
  template:
    metadata:
      labels:
              app: app-b-service
    spec:
      containers:
      - name: app-b
        image: nginx
        ports:
        - containerPort: 80
