services-a-b.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-a-service
  namespace: appns-a
spec:
  selector:
    app: app-a-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app-b-service
  namespace: appns-b
spec:
  selector:
    app: app-b-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
